--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -2571,6 +2571,7 @@ background: rgb(255,255,204)  ;
     height: 23px;
     outline-style: none !important;
     padding: 3px 6px 3px 0;
+    width:80px;
 	/*background: #888;*/
 }
 /* MODULE 3 : END */
@@ -3196,4 +3197,38 @@ color: #f1b532;
 .autoHeight
 {
 	background: url("images/ui-bg_highlight-soft_75_cccccc_1x100.png") repeat-x scroll 50% 50% #CCCCCC;
+}
+
+.checkdemo
+{
+	position: static;
+}
+.osceSequencePopupPanelSize
+{
+	border-radius:4px !important; 
+	height:70px !important;
+	width: 190px !important;	
+}
+.osceSequencePopuplable
+{
+	margin-top:7px !important;
+	margin-left:5px !important;
+}
+.osceSequencePopupComboBox
+{
+	width:70 !important;
+	margin-left:12px !important;
+	margin-top:5px !important;
+}
+.osceSequencePopupSaveButton
+{
+	width:70 !important;
+	margin-left:10px !important;
+	margin-top:10px !important;
+}
+.osceSequencePopupCloseButton
+{
+	width:70 !important;
+	margin-left:20px !important;
+	margin-top:10px !important;
 }
