Changes For Dock Menu and File Path Constant

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -2578,8 +2578,8 @@ background: rgb(255,255,204)  ;
     height: 23px;
     outline-style: none !important;
     padding: 3px 6px 3px 0;
-    width:80px;
-	/*background: #888;*/
+    /*width:80px;
+	background: #888;*/
 }
 /* MODULE 3 : END */
 
