--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -3025,7 +3025,16 @@ color: #f1b532;
     border-right: 8px solid transparent; 
     border-top: 8px solid #fff;
     }
-
+.arrow-popup-border{ 
+	position:absolute; 
+	bottom:-8px; 
+	left:51px;
+    width: 0; 
+    height: 0; 
+    border-left:8px solid transparent; 
+    border-right: 8px solid transparent; 
+    border-top: 8px solid #AAAAAA;
+}
 .gwt-PopupPanel {
     background: url("images/ui-bg_highlight-soft_0_e0e0e0_1x400.png") repeat-x scroll 50% 50% #FFFFFF;
     border: 1px solid #AAAAAA;
