--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -3408,8 +3408,9 @@ background: url("images/downArrow.png") ;
 	border-color: #676767;
     border-radius: 7px 7px 7px 7px;
     border-width: 2px;
-    float: right;    
-    margin-right: -12px;
+    left: 1187px;
+    position: absolute;
+    top: -8px
 }
 
 .learningObjPopupLabel{
