--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -3494,6 +3494,11 @@ color: #f1b532;
 
 .learningObjPopupLabel{
 	margin-left: 8px;
+	margin-right: 8px;
+}
+
+.learningObjPopupButton{
+	margin-right: 8px;
 }
 
 .learningObjScroll{
