Role Module Bugfix

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -3510,3 +3510,8 @@ color: #f1b532;
 {
 	height: 625px;
 }
+.bottomBorder{
+	border-bottom-left-radius: 16px;
+	border-bottom-right-radius: 16px;
+	
+}
